cert-manager/ingress-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seeds-web-ingress
  namespace: seeds-uat 
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-set-header: |
      Host $http_host
      X-Real-IP $remote_addr
      X-Forwarded-For $proxy_add_x_forwarded_for
    nginx.ingress.kubernetes.io/proxy-redirect: "off"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"

spec:
  tls: 
  - secretName: seeds-web-ssl
    hosts:
    - uat.seedslabs.io
  rules:
  - host: uat.seedslabs.io
    http:
      paths:
      - backend:
          service:
            name: seeds-web-nginx
            # name: seeds-web
            port:
              number: 80
        path: /
        pathType: Prefix
        # # 添加跨域头信息
        # headers:
        # - name: Access-Control-Allow-Origin
        #   value: "https://uat.seedslabs.io"
        # - name: Access-Control-Allow-Methods
        #   value: $access_control_methods
        # - name: Access-Control-Allow-Headers
        #   value: $access_control_headers
      # - path: /admin/(.*)
      #   pathType: Prefix
      #   backend:
      #     service: 
      #       name: seeds-gateway
      #       port: 
      #         number: 9999
      #   # # 添加跨域头信息
      #   # headers:
      #   #   - name: Access-Control-Allow-Methods
      #   #     value: $access_control_methods
      #   #   - name: Access-Control-Allow-Headers
      #   #     value: $access_control_headers
      # - path: /api/v1/(.*)
      #   pathType: Prefix
      #   backend:
      #     service: 
      #       name: seeds-gateway
      #       port: 
      #         number: 9999
      #   # 添加跨域头信息
      #   headers:
      #     - name: Access-Control-Allow-Methods
      #       value: $access_control_methods
      #     - name: Access-Control-Allow-Headers
      #       value: $access_control_headers
